# hydra_example

./: .gitignore  README.md  flake.nix  pyproject.toml
configs/: config.yaml
hydra_example/: script.py
hydra_example/dataset/: dataset.py  text_dataset.py
hydra_example/optimizer/: optimizer.py  sgd.py
hydraexample/: script.py  trainer.py  utils.py
hydraexample/configs/: config.yaml
hydraexample/configs/dataset/: imagenet.yaml  translation.yaml
hydraexample/configs/model/: mlp.yaml
hydraexample/configs/optimizer/: adam.yaml  sgd.yaml
hydraexample/dataset/: image_dataset.py  text_dataset.py
hydraexample/model/: mlp.py
hydraexample/optimizer/: adam.py  sgd.py
