[tool.poetry]
name = "hydra-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hydraexample"}]

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^1.3.1"
jax = "^0.4.2"
flax = "^0.6.4"
jaxlib = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"